--- a/04-ux-skabelon-master/index.html
+++ b/04-ux-skabelon-master/index.html
@@ -56,7 +56,7 @@
 
     <!-- footer -->
     <footer>
-        <p>Dette site er lavet som et studieprojekt på kea af [Kenny Mark Kennedy]</p>
+        <p>Dette site er lavet som et studieprojekt på kea af [Kenny Kennedy]</p>
     </footer>
     <!-- footer slut -->
 
@@ -65,6 +65,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script>
         window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
+
     </script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
